# graph-baseline-ext

./: .gitignore  CMakeLists.txt  build_duckdb.sh  readme.md
duckdb/: CMakeLists.txt  fig9.sh  main.cc  test.sh
gridgraph/: Makefile  algm.sh  tab6.sh
gridgraph/examples/: cdlp.cpp  sssp.cpp
gridgraph/tools/: convert.cc  convert.py  preprocess.cpp
mosaic/: citpatents.sh  wikitalk.sh
mosaic/config/: default.py
mosaic/src/: CMakeLists.txt
mosaic/src/lib/core/algorithms/: cdlp.h.bak
mosaic/src/lib/util/: runnable.cc
mosaic/src/tools/grc/: partition-manager.cc
nebula/: CMakeLists.txt  exp1.sh  exp2.sh  fig6.sh  fig7.sh  fig7_property.sh  load.sh  load_algm.sh  load_data.sh  load_property.sh  load_property_graph.sh  nebula_rw.cc  nebula_tools.cc  nebula_tools.h  tab6.sh  test_algm.sh  test_property.sh
umbra/: CMakeLists.txt  exp1.sh  fig9.sh  load.sh  load_data.sh  main.cc  sql.cc  sql.h
